--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=middle">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First-page</title>
 </head>
 <body>
-    <h1>Hello World this is my first web page.</h1>
+    <h1>I'm Sravya Mandhadapu.</h1>
 </body>
 </html>
